--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,79 @@
+# ============================================================================
+# Python / Backend
+# ============================================================================
+
+# Virtual environment
+/backend/venv/
+/backend/.venv/
+
+# Environment variables
 /backend/.env
+/backend/.env.local
+
+# Python cache
+**/__pycache__/
+*.py[cod]
+*$py.class
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Distribution
+/backend/dist/
+/backend/build/
+/backend/*.egg-info/
+
+# ============================================================================
+# Node / Frontend
+# ============================================================================
+
+# Dependencies
+/frontend/node_modules/
+
+# Production build
+/frontend/dist/
+
+# Environment variables
+/frontend/.env
+/frontend/.env.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+
+# ============================================================================
+# IDE / Editor
+# ============================================================================
+
+# VS Code
+.vscode/*
+!.vscode/extensions.json
+
+# JetBrains
+.idea/
+
+# ============================================================================
+# OS
+# ============================================================================
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+
+# ============================================================================
+# Project Specific
+# ============================================================================
+
+# AI rules
 .ai-rules.md
+
+# Logs
+*.log
+
+# Temporary files
+*.tmp
+.cache/
