--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@tailwindcss/typography": "^0.5.19",
     "framer-motion": "^12.23.26",
     "geist": "^1.5.1",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.11.0",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
